# 3-python-package-float

./: Pipfile  README.md  example.py  pyproject.toml
.github/workflows/: Pipfile  build.yaml
src/mycodebuddyproject/: __init__.py  __main__.py  fun_facts.py  get_debug_tips.py  get_help.py  study_timer.py
tests/: test_debug_tips.py  test_fun_facts.py  test_language_help.py  test_study_timer.py
